<resources>
    <string name="app_name">Atlas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_weather">Weather</string>
    <string name="title_activity_setting">Settings</string>
    <string name="color_palette">Pick the color</string>
    <string name="colors">Colors</string>
    <string name="please_wait">Please wait…</string>
    <string name="app_loading_more">loading…</string>
    <string name="loading_chn">正在加载…</string>

    <!--fragment name-->
    <string name="fm_new">New</string>
    <string name="fm_hot">Hot</string>
    <string name="fm_node">Node</string>
    <string name="fm_atlas">Atlas</string>
    <string name="fm_flash">Flash</string>
    <string name="fm_hupu">Hupu</string>
    <string name="fm_gank">Gank</string>
    <string name="fm_v2ex">V2ex</string>



    <string-array name="atlas_drawbles">
        <item>http://ww4.sinaimg.cn/large/a823bdcdgw1f1ad0n7ohzj21hc118h8x.jpg</item>
        <item>http://ww3.sinaimg.cn/large/a823bdcdgw1f1ad0ls8wpj21hc11u7s1.jpg</item>
        <item>http://ww2.sinaimg.cn/large/a823bdcdgw1f1ad0k0y7fj20rs0orgpu.jpg</item>
    </string-array>

    <string name="weather_city_shaoxing_url">http://ww3.sinaimg.cn/large/a823bdcdgw1f1agjq8nouj20rs0ijdky.jpg</string>
    <string name="weather_city_ningbo_url">http://ww4.sinaimg.cn/mw690/a823bdcdgw1f1ahae2mwdj21kw0siaj2.jpg</string>
    <string name="weather_city_xian_url">http://ww2.sinaimg.cn/large/a823bdcdgw1f1agjspcycj21ok14egym.jpg</string>

    <string name="shaoxing">绍兴</string>
    <string name="ningbo">宁波</string>
    <string name="xian">西安</string>
    <string name="action_info">Info</string>

    <!--微信返回-->
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="title_activity_picture">Picture</string>
    <string name="picture_has_save_to">图片已保存至 %s 文件夹</string>

    <!--GANK-->
    <string name="gank_android">Android</string>
    <string name="gank_ios">iOS</string>
    <string name="gank_video">休息视频</string>
    <string name="gank_fuli">福利</string>
    <string name="gank_resource">拓展资源</string>
    <string name="gank_front">前端</string>
    <string name="gank_recommend">瞎推荐</string>
    <string name="gank_all">All</string>


    <string name="gank_daily">Daily</string>
    <string name="gank_sort">Sort</string>
    <string name="title_activity_webview" />

    <string name="on_error">貌似出错了:(</string>
    <string name="user_name">Tianyang Sheng</string>
    <string name="user_email">tyshengsx@gmail.com</string>
</resources>
