<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/action_1"
        android:icon="@drawable/ic_insert_photo_gray_24dp"
        android:title="@string/fm_gank"/>
    <item
        android:id="@+id/action_2"
        android:icon="@drawable/ic_insert_emoticon_gray_24dp"
        android:title="@string/fm_v2ex"/>
    <item
        android:id="@+id/action_3"
        android:icon="@drawable/ic_text_format_gray_24dp"
        android:title="@string/gank_daily"/>
    <item
        android:id="@+id/action_4"
        android:icon="@drawable/ic_text_format_gray_24dp"
        android:title="@string/title_activity_weather"/>
    <item
        android:id="@+id/action_5"
        android:icon="@drawable/ic_text_format_gray_24dp"
        android:title="@string/action_settings"/>
</menu>